--- a/dev/golang/docker-compose.yml
+++ b/dev/golang/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.7'
 services:
   hello-world:
-    image: okteto/udemy:hello-world
+    image: pchico83/udemy:hello-world
     build: .
   dev:
-    image: okteto/udemy:hello-world-dev
+    image: pchico83/udemy:hello-world-dev
     build:
       context: .
       target: builder
