--- a/secrets/secretvolumes.yaml
+++ b/secrets/secretvolumes.yaml
@@ -19,12 +19,11 @@ spec:
         image: nginx
         ports:
         - containerPort: 80
-      volumeMounts:
-      - name: data
-        mountPath: /etc/mount-secret
-        subPath: key1
+        volumeMounts:
+        - name: data
+          mountPath: /etc/mount-secret
       volumes:
         - name: data
           secret:
-            name: sample
+            secretName: sample
             defaultMode: 0400
