--- a/dev/golang/k8s.yaml
+++ b/dev/golang/k8s.yaml
@@ -29,5 +29,5 @@ spec:
         app: hello-world
     spec:
       containers:
-        - image: pchico83/udemy:hello-world
+        - image: pchico83/alumnos:hello-world
           name: hello-world
