--- a/voting-app/db.yaml
+++ b/voting-app/db.yaml
@@ -30,6 +30,9 @@ spec:
       containers:
       - image: postgres:9.4
         name: db
+        env:
+        - name: POSTGRES_HOST_AUTH_METHOD
+          value: "trust"
         ports:
         - containerPort: 5432
         volumeMounts:
