Set resources in voting-app

--- a/voting-app/db.yaml
+++ b/voting-app/db.yaml
@@ -38,6 +38,10 @@ spec:
         volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: data
+        resources:
+          limits:
+            cpu: 200m
+            memory: 256Mi
       volumes:
       - name: data
         emptyDir: {} 
