--- a/voting-app/vote.yaml
+++ b/voting-app/vote.yaml
@@ -33,3 +33,7 @@ spec:
         name: vote
         ports:
         - containerPort: 80
+        resources:
+          limits:
+            cpu: 200m
+            memory: 256Mi
