--- a/voting-app/worker.yaml
+++ b/voting-app/worker.yaml
@@ -15,3 +15,7 @@ spec:
       containers:
       - image: dockersamples/examplevotingapp_worker
         name: worker
+        resources:
+          limits:
+            cpu: 200m
+            memory: 256Mi
