Update okteto manifest to use sync

--- a/dev/python/okteto.yml
+++ b/dev/python/okteto.yml
@@ -1,5 +1,6 @@
 name: vote
-workdir: /src
-command: ["python", "app.py"]
 environment:
   - FLASK_ENV=development
+command: ["python", "app.py"]
+sync:
+  - .:/src
