--- a/dev/golang/okteto.yml
+++ b/dev/golang/okteto.yml
@@ -1,12 +1,13 @@
 name: hello-world
 image: okteto/golang:1
-mountpath: /app
 command: ["bash"]
-volumes:
-  - /go
-  - /root/.cache/go-build
-  - /root/.vscode-server
 resources:
   limits:
     cpu: 2
     memory: 4Gi
+volumes:
+  - /go
+  - /root/.cache/go-build
+  - /root/.vscode-server
+sync:
+  - .:/app
